// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react full output snapshots > BatchUpdates 1`] = `
"import { useState, useMemo } from "react";
export function BatchUpdates(props: React.HTMLAttributes<HTMLElement>)
{
const [x, setX] = useState(0)
const [y, setY] = useState(0)
const sum = useMemo(() => x + y, [x, y])
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <span>{sum}</span>
  <button onClick={() => { setX(x + 1); setY(y + 1); }}>Both</button>
</div>
)
}
"
`;

exports[`react full output snapshots > BoundField 1`] = `
"export function Field(props: { value?: string; onUpdateValue?: (value: string) => void } & React.HTMLAttributes<HTMLElement>)
{
const { value, onUpdateValue, ...__attrs } = props
return (
<input {...__attrs} value={props.value} className={props.className} onInput={e => props.onUpdateValue?.(e.target.value)} />
)
}
"
`;

exports[`react full output snapshots > Composite 1`] = `
"import { useState, useMemo, useEffect } from "react";
export function Composite(props: React.HTMLAttributes<HTMLElement>)
{
const [x, setX] = useState(1)
const [y, setY] = useState(2)
const sum = useMemo(() => x + y, [x, y])
useEffect(() => { console.log("sum:", sum); }, [sum])
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <span id="sum">{sum}</span>
  <button id="incX" onClick={() => setX(x + 1)}>+X</button>
  <button id="incY" onClick={() => setY(y + 1)}>+Y</button>
</div>
)
}
"
`;

exports[`react full output snapshots > Conditional 1`] = `
"import { useState } from "react";
export function Conditional(props: React.HTMLAttributes<HTMLElement>)
{
const [visible, setVisible] = useState(true)
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {visible ? <span>Visible</span> : <span>Hidden</span>}
  <button onClick={() => setVisible(!visible)}>Toggle</button>
</div>
)
}
"
`;

exports[`react full output snapshots > ConditionalClass 1`] = `
"import { useState } from "react";
export function ConditionalClass(props: React.HTMLAttributes<HTMLElement>)
{
const [active, setActive] = useState(false)
const { ...__attrs } = props
return (
<div {...__attrs} className={[active ? "active" : "inactive", props.className].filter(Boolean).join(" ")}>
  <button onClick={() => setActive(!active)}>Toggle</button>
</div>
)
}
"
`;

exports[`react full output snapshots > ControlledSelect 1`] = `
"import { useState } from "react";
export function ControlledSelect(props: React.HTMLAttributes<HTMLElement>)
{
const [value, setValue] = useState("b")
const { ...__attrs } = props
return (
<select {...__attrs} value={value} className={props.className} onChange={e => setValue(e.target.value)}>
  <option value="a">A</option>
  <option value="b">B</option>
  <option value="c">C</option>
</select>
)
}
"
`;

exports[`react full output snapshots > ControlledTextarea 1`] = `
"import { useState } from "react";
export function ControlledTextarea(props: React.HTMLAttributes<HTMLElement>)
{
const [text, setText] = useState("")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <textarea value={text} onInput={e => setText(e.target.value)} />
  <p>{text.length} characters</p>
</div>
)
}
"
`;

exports[`react full output snapshots > Counter 1`] = `
"import { useState, useMemo, useEffect } from "react";
export function Counter(props: React.HTMLAttributes<HTMLElement>)
{
const [count, setCount] = useState(0)
const doubled = useMemo(() => count * 2, [count])
useEffect(() => { console.log("count:", count); }, [count])
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <p>{count}</p>
  <p>{doubled}</p>
  <button onClick={() => setCount(count + 1)}>+1</button>
</div>
)
}
"
`;

exports[`react full output snapshots > DefineSlotBasic 1`] = `
"export function DefineSlotBasic(props: { header?: React.ReactNode; children?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { header, children, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <header>
    {props.header}
  </header>
  <main>
    {props.children}
  </main>
</div>
)
}
"
`;

exports[`react full output snapshots > DynamicList 1`] = `
"import { useState, Fragment } from "react";
export function DynamicList(props: React.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = useState([])
const [input, setInput] = useState("")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <input value={input} onInput={e => setInput(e.target.value)} />
  <button onClick={() => { setItems([...items, input]); setInput(""); }}>Add</button>
  <ul>
    {items.map((item, i) => (<Fragment key={i}><li>{item}</li></Fragment>))}
  </ul>
</div>
)
}
"
`;

exports[`react full output snapshots > EffectCleanup 1`] = `
"import { useState, useEffect } from "react";
export function EffectCleanup(props: React.HTMLAttributes<HTMLElement>)
{
const [active, setActive] = useState(true)
useEffect(() => { if (active) { const id = setInterval(() => console.log("tick"), 1000); return () => clearInterval(id); } }, [active])
const { ...__attrs } = props
return (
<button {...__attrs} className={props.className} onClick={() => setActive(!active)}>Toggle</button>
)
}
"
`;

exports[`react full output snapshots > ElementRef 1`] = `
"import { useRef, useEffect } from "react";
export function ElementRef(props: React.HTMLAttributes<HTMLElement>)
{
const inputRef = useRef(null)
useEffect(() => { inputRef.current?.focus(); }, [])
const { ...__attrs } = props
return (
<input {...__attrs} placeholder="auto-focus" className={props.className} ref={inputRef} />
)
}
"
`;

exports[`react full output snapshots > EmitButton 1`] = `
"export function EmitButton(props: { onPress?: (...args: any[]) => void } & React.HTMLAttributes<HTMLElement>)
{
const { onPress, ...__attrs } = props
return (
<button {...__attrs} className={props.className} onClick={() => props.onPress?.(1)}>Go</button>
)
}
"
`;

exports[`react full output snapshots > ForLoop 1`] = `
"import { useState, Fragment } from "react";
export function ForLoop(props: React.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = useState(["Apple", "Banana", "Cherry"])
const { ...__attrs } = props
return (
<ul {...__attrs} className={props.className}>
  {items.map((item) => (<Fragment key={item}><li>{item}</li></Fragment>))}
</ul>
)
}
"
`;

exports[`react full output snapshots > FormField 1`] = `
"import { useState } from "react";
export function FormField(props: React.HTMLAttributes<HTMLElement>)
{
const [value, setValue] = useState("")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <input value={value} onInput={e => setValue(e.target.value)} />
  <p>{value}</p>
</div>
)
}
"
`;

exports[`react full output snapshots > HasSlot 1`] = `
"export function HasSlot(props: { children?: React.ReactNode; prefix?: React.ReactNode; suffix?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { children, prefix, suffix, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {(props.prefix != null) ? <span className="prefix">{props.prefix}</span> : null}
  {(props.children != null) ? <main>{props.children}</main> : null}
  {!(props.suffix != null) ? <span className="no-suffix">none</span> : null}
</div>
)
}
"
`;

exports[`react full output snapshots > HasSlotFallback 1`] = `
"export function HasSlotFallback(props: { suffix?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { suffix, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {!(props.suffix != null) ? <span className="no-suffix">absent</span> : <span className="has-suffix">present</span>}
</div>
)
}
"
`;

exports[`react full output snapshots > IButton 1`] = `
"export function IButton(props: { label: string; disabled?: boolean } & React.HTMLAttributes<HTMLElement>)
{
const { label, disabled, ...__attrs } = props
return (
<button {...__attrs} disabled={props.disabled} className={props.className}>{props.label}</button>
)
}
"
`;

exports[`react full output snapshots > Lifecycle 1`] = `
"import { useState, useEffect } from "react";
export function Lifecycle(props: React.HTMLAttributes<HTMLElement>)
{
const [mounted, setMounted] = useState(false)
useEffect(() => { setMounted(true); }, [])
useEffect(() => () => { console.log("cleanup"); }, [])
const { ...__attrs } = props
return (
<span {...__attrs} className={props.className}>{mounted ? "mounted" : "pending"}</span>
)
}
"
`;

exports[`react full output snapshots > MemoChain 1`] = `
"import { useState, useMemo } from "react";
export function MemoChain(props: React.HTMLAttributes<HTMLElement>)
{
const [base, setBase] = useState(1)
const doubled = useMemo(() => base * 2, [base])
const quadrupled = useMemo(() => doubled * 2, [doubled])
const label = useMemo(() => \`Value: \${quadrupled}\`, [quadrupled])
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <span>{label}</span>
  <button onClick={() => setBase(base + 1)}>+1</button>
</div>
)
}
"
`;

exports[`react full output snapshots > MixedControlFlow 1`] = `
"import { useState, Fragment } from "react";
export function MixedControlFlow(props: React.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = useState(["a", "b", "c"])
const [filter, setFilter] = useState("")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <input value={filter} onInput={e => setFilter(e.target.value)} />
  <ul>
    {items.map((item) => (<Fragment key={item}>{item.includes(filter) ? <li>{item}</li> : null}</Fragment>))}
  </ul>
</div>
)
}
"
`;

exports[`react full output snapshots > ModelInput 1`] = `
"export function ModelInput(props: { value?: string; onUpdateValue?: (value: string) => void } & React.HTMLAttributes<HTMLElement>)
{
const { value, onUpdateValue, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <input value={props.value} onInput={e => props.onUpdateValue?.(e.target.value)} />
  <p>{props.value}</p>
</div>
)
}
"
`;

exports[`react full output snapshots > MultiChildSlot 1`] = `
"export function Box(props: { children?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { children, ...__attrs } = props
return (
<div {...__attrs} className={["box", props.className].filter(Boolean).join(" ")}>
  {props.children}
</div>
)
}
"
`;

exports[`react full output snapshots > MultiRefs 1`] = `
"import { useRef, useEffect } from "react";
export function MultiRefs(props: React.HTMLAttributes<HTMLElement>)
{
const inputRef = useRef(null)
const buttonRef = useRef(null)
useEffect(() => { inputRef.current?.focus(); }, [])
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <input placeholder="focus me" ref={inputRef} />
  <button ref={buttonRef}>Click</button>
</div>
)
}
"
`;

exports[`react full output snapshots > MultipleComponentsPerFile 1`] = `
"export function Label(props: { text: string } & React.HTMLAttributes<HTMLElement>)
{
const { text, ...__attrs } = props
return (
<span {...__attrs} className={props.className}>{props.text}</span>
)
}
"
`;

exports[`react full output snapshots > NativeBind 1`] = `
"import { useState } from "react";
export function NativeBind(props: React.HTMLAttributes<HTMLElement>)
{
const [text, setText] = useState("")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <input value={text} onInput={e => setText(e.target.value)} />
  <p>{text}</p>
</div>
)
}
"
`;

exports[`react full output snapshots > PropDefaults 1`] = `
"export function PropDefaults(props: { color?: string; size: number } & React.HTMLAttributes<HTMLElement>)
{
const { color = "blue", size, ...__attrs } = props
return (
<div {...__attrs} style={\`color: \${color}\`} className={props.className}>{props.size}</div>
)
}
"
`;

exports[`react full output snapshots > SlotBasic 1`] = `
"export function SlotBasic(props: { children?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { children, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {props.children}
</div>
)
}
"
`;

exports[`react full output snapshots > SlotInConditional 1`] = `
"import { useState } from "react";
export function SlotInConditional(props: { header?: React.ReactNode; children?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const [expanded, setExpanded] = useState(true)
const { header, children, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {props.header}
  {expanded ? props.children : null}
</div>
)
}
"
`;

exports[`react full output snapshots > SlotNamed 1`] = `
"export function SlotNamed(props: { header?: React.ReactNode; children?: React.ReactNode; footer?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { header, children, footer, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <header>
    {props.header}
  </header>
  <main>
    {props.children}
  </main>
  <footer>
    {props.footer}
  </footer>
</div>
)
}
"
`;

exports[`react full output snapshots > SlotScoped 1`] = `
"import { useState, Fragment } from "react";
export function SlotScoped(props: { item?: (...args: any[]) => React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = useState([{ id: 1, label: "One" }, { id: 2, label: "Two" }])
const { item, ...__attrs } = props
return (
<ul {...__attrs} className={props.className}>
  {items.map((item, index) => (<Fragment key={item.id}><li>{props.item?.(item, index) ?? <>{index}: {item.label}</>}</li></Fragment>))}
</ul>
)
}
"
`;

exports[`react full output snapshots > SlotScopedSingle 1`] = `
"import { useState } from "react";
export function SlotScopedSingle(props: { renderDefault?: (...args: any[]) => React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const [value, setValue] = useState("hello")
const { renderDefault, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {props.renderDefault?.(value) ?? <span>{value}</span>}
</div>
)
}
"
`;

exports[`react full output snapshots > SlotWithDefault 1`] = `
"export function SlotWithDefault(props: { children?: React.ReactNode; actions?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { children, actions, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <main>
    {props.children ?? <p>Default content</p>}
  </main>
  <footer>
    {props.actions ?? <span>Action area</span>}
  </footer>
</div>
)
}
"
`;

exports[`react full output snapshots > SlotWithFallback 1`] = `
"export function SlotWithFallback(props: { header?: React.ReactNode; children?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { header, children, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {props.header ?? <h1>Default Header</h1>}
  {props.children ?? "Default body content"}
</div>
)
}
"
`;

exports[`react full output snapshots > SwitchTabs 1`] = `
"import { useState } from "react";
export function SwitchTabs(props: React.HTMLAttributes<HTMLElement>)
{
const [tab, setTab] = useState("a")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {tab === "a" ? <p>Tab A</p> : tab === "b" ? <p>Tab B</p> : null}
  <button onClick={() => setTab(tab === "a" ? "b" : "a")}>Switch</button>
</div>
)
}
"
`;

exports[`react multi-component files > ComponentRef (all files) 1`] = `
"export function Child(props: React.HTMLAttributes<HTMLElement>)
{
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>Child</div>
)
}

import { useRef, useEffect, forwardRef } from "react";
export const ComponentRef = forwardRef(function ComponentRef(props: React.HTMLAttributes<HTMLElement>, ref)
{
const childRef = useRef(null)
useEffect(() => { console.log(childRef.current); }, [])
const { ...__attrs } = props
return (
<Child {...__attrs} className={props.className} ref={childRef} />
)
});
"
`;
